
* Added color=lb (Light-Bartlein), color=gist_earth, and
  color=spectral color schemes
* sfipick: example Tkinter script for interactive picking
* sfvelan: interactive velocity picking using matplotlib
* Added x0= and mwt= parameters in sfconjgrad
* Added griddash= parameter to stdplot
* sflas2rsf: Convert LAS-2 well logs to RSF
* Added segy= parameter to sfheaderattr

===Bug fixes===

* Fixed memsize definition bug in sfrotate and sfreverse

In the reproducible documents collection:

In documentation:

In APIs:

* Fixed __array_wrap__ bug in Python API

In the Python package:

In programs:

* Fixed output size bug in sfinttest1

In the build system:

===Changes in defaults and interfaces===

==Release 1.6 (2014-05-09)==

===Additions and enhancements===

To the reproducible documents collection:

* gallery: migration gallery
* Moved jsg to tccs
* tccs/buttefly: A fast butterfly algorithm for generalized Radon
  transforms (Hu, Fomel, Demanet, and Ying)
* tccs/opwd: Omnidirectional plane-wave destruction (Chen, Fomel, and
  Lu)
* tccs/specrecom: Automated spectral recomposition with application in
  stratigraphic interpretation (Cai, Fomel, and Zeng)
* Moved sep/aniso to cwp/aniso
* icp/sam2013gpushortestpath: Shortest path ray tracing on parallel
  GPU devices (Monsegny and Agudelo)
* tccs/nar: Seismic data decomposition into spectral components using
  regularized nonstationary autoregression (Fomel)
* tccs/dsrtomo: First-break traveltime tomography with the
  double-square-root eikonal equation (Li, Vladimirsky, and Fomel)
* cup/rna2d: Random noise attenuation using f-x regularized
  nonstationary autoregression (Liu, Chen, Du, and Wu)
* cup/rna3d: Noncausal f-x-y regularized nonstationary prediction
  filtering for random noise attenuation on 3D seismic data (Liu and
  Chen)
* tccs/psp: A parallel sweeping preconditioner for heterogeneous 3D
  Helmholtz equations (Poulson, Engquist, Li, and Ying)