@@ -16,7 +16,7 @@ except:
 targets = bldutil.UserSconsTargets()
 
 targets.py = '''
-svd
+pysvd
 threedcube
 gui
 browser
