@@ -45,8 +45,6 @@ To programs:
 
 ===Bug fixes===
 
-* Fixed memsize definition bug in sfrotate and sfreverse
-
 In the reproducible documents collection:
 
 In documentation:
@@ -60,8 +58,11 @@ In the Python package:
 In programs:
 
 * Fixed output size bug in sfinttest1
+* Fixed memsize definition bug in sfrotate and sfreverse
 
 In the build system:
+
+* Added '.exe' suffix for python programs in Cygwin
 
 ===Changes in defaults and interfaces===
 
